# corrosionwm

./: .dev.env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  log.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
scripts/: build.sh  format.sh  nightly.sh  setup_devenv.sh
src/: config.rs  cursor.rs  drawing.rs  input.rs  main.rs  state.rs  udev.rs  winit.rs
src/backend/: drm.rs  gbm.rs  mod.rs  utils.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  keybindings.rs  mod.rs  wlr_layer.rs  xdg_shell.rs
